--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,6 @@ html {
   scroll-behavior: smooth;
 }
 
-html, body{
-  overflow-x: hidden;
-}
 
 
 code {
@@ -217,9 +214,10 @@ code {
   }
 }
 
+
 @media only screen and (max-width: 600px){
   .App {
-    width: 105%;
+    width: 115%;
   }
   .work-card{
     width: 330px;
@@ -232,6 +230,7 @@ code {
   }
   #profile-image, .blog-card, #contact{
     width: 95%;
+    margin-left: 10px;
   }
 }
 
