--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,12 @@
 @import 'node_modules/react-modal-video/scss/modal-video.scss';
+
+main #work div.cards-container.row {
+    margin-left: '100px';
+    margin-top: '0px';
+    margin-right: '100px';
+    
+    @media screen and (max-width: 1199px) {
+       margin-left: 0;
+       margin-right: 0; 
+    }
+}
